--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- ScrollReveal -->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
   <body>
