--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800" rel="stylesheet">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/main.css">
     <!-- ScrollReveal -->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
   <body>
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#info-one">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#info-two">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <!--  -->
+    <!-- info one -->
     <section id="info-one">
       <div class="container">
         <div class="row mt-5">
@@ -93,11 +93,11 @@
     <section id="info-two">
       <div class="container">
         <div class="row my-5">
-          <div class="col-md-6 mt-3">
+          <div class="col-md-6 mt-3 info-p">
             <h2>lorem ipsum dolor</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
-          <div class="col-md-6 mt-3">
+          <div class="col-md-6 mt-3 info-p">
             <h2>lorem ipsum dolor</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -166,20 +166,32 @@
         origin: 'left',
         distance: '300px',
         viewFactor: 0.2
+      })
 
+      sr.reveal('.info-left', {
+        duration: 2000,
+        origin: 'bottom',
+        distance: '300px',
+      })
+
+      sr.reveal('.info-p', {
+        duration: 2000,
+        origin: 'bottom',
+        distance: '300px',
+        delay: 1000
       })
 
       // smooth
 
       document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-        e.preventDefault();
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
 
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          document.querySelector(this.getAttribute('href')).scrollIntoView({
             behavior: 'smooth'
+          });
         });
-    });
-});
+      });
 
     </script>
 
