--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Bootstrap Template</title>
-<<<<<<< HEAD
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800" rel="stylesheet">
@@ -13,8 +12,6 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
-
-=======
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
     <!-- BOOTSTRAP 4 -->
@@ -23,10 +20,10 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/main.css">
->>>>>>> fa155f6f4c87a4ad65b585ec9cce61c2c63e6ce1
+
   </head>
   <body>
-    
+
     <!-- Navegacion -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
@@ -193,8 +190,7 @@
         delay: 1000
       })
 
-      // smooth
-
+      // smooth effect
       document.querySelectorAll('a[href^="#"]').forEach(anchor => {
         anchor.addEventListener('click', function (e) {
           e.preventDefault();
@@ -204,7 +200,6 @@
           });
         });
       });
-
     </script>
 
 
